[package]
name = "json-ns"
version = "0.1.0"
authors = ["Stéphan Kochen <stephan@kochen.nl>"]
description = "A subset of JSON-LD"
repository = "https://github.com/stephank/json-ns"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/json-ns"

[dependencies]
cfg-if = "0.1.5"
serde_json = "1.0.32"

[dev-dependencies]
colored = "1.6.1"
